# thai-slip-copilot

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/: verify_slip_labels.py
assets/fonts/: README.md
data/real_scrape/roboflow/: provenance.jsonl  sources.json
scripts/: build_gold_set.py  detect_predict.py  eval_on_gold.py  extract_smoke.py  kplus_template_labels.py  merge_real_datasets.py  merge_real_v2.py  ocr_smoke.py  preview_labels.py  qwen_vl_label.py  scrape_roboflow.py
src/thai_slip_copilot/: __init__.py  detect_train.py  extract.py  fields.py  ocr.py  parsers.py  render.py  sampler.py  schema.py
tests/: test_parsers.py
